fix menu overlap on faq page

--- a/scss/partials/_classes.scss
+++ b/scss/partials/_classes.scss
@@ -724,7 +724,7 @@ Headers:		'Varela Round', sans-serif;
   padding: 0;
 }
 .hero .page-title {
-  padding-top: 5rem;
+  padding-top: 1rem;
   padding-bottom: 3rem;
 }
 .hero .page-title a {
